objects/Employee__c/fields/skills__c.field-meta.xml
<CustomField>
    <fullName>skills__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>skills</label>
    <length>180</length>
    <type>Text</type>
</CustomField>