objects/Employee__c/fields/Stipend__c.field-meta.xml
<CustomField>
    <fullName>Stipend__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stipend</label>
    <length>180</length>
    <type>Text</type>
</CustomField>